--- a/Fret1/Fret1/wwwroot/css/app.css
+++ b/Fret1/Fret1/wwwroot/css/app.css
@@ -200,9 +200,24 @@ app {
 }
 
 #note.scaleHighlight {
-    background: pink;
+    background-image: linear-gradient(225deg, red, red 10px, transparent 10px, transparent);
 }
 
 #note.chordHighlight {
+    background-image: linear-gradient(45deg, green, green 10px, transparent 10px, transparent);
+}
+
+#options {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 2px;
+    margin: 10px;
+}
+
+.label[for=scaleKey] {
     color: red;
+}
+
+.label[for=chordKey] {
+    color: green;
 }
