--- a/Fret1/Fret1/wwwroot/css/app.css
+++ b/Fret1/Fret1/wwwroot/css/app.css
@@ -210,7 +210,7 @@ app {
 
 #options {
     display: grid;
-    grid-template: 1fr 1fr / min-content auto auto auto;
+    grid-template: 1fr 1fr / min-content 2fr 2fr 1fr;
     grid-gap: 2px;
     margin: 10px;
 }
