--- a/Fret1/Fret1/Pages/Index.razor
+++ b/Fret1/Fret1/Pages/Index.razor
@@ -2,6 +2,6 @@
 
 <h1>Fret1</h1>
 
-Select a chord or scale.
+A guitar chord finder that display both scales and chords overlapped on the fretboard.
 
 <Fretboard/>
