Add some HTML content!

--- a/Fret1/Fret1/wwwroot/css/app.css
+++ b/Fret1/Fret1/wwwroot/css/app.css
@@ -227,3 +227,14 @@ app {
     color: gray;
     display: inline-block;
 }
+
+
+footer{
+    font-size: x-small;
+    font-weight: 100;
+    text-align: center;
+}
+
+header {
+    text-align: center;
+}
